created login modal and fixed modal background

--- a/react-app/src/components/Login/LoginForm.module.css
+++ b/react-app/src/components/Login/LoginForm.module.css
@@ -1,3 +1,16 @@
+.modalContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.modalButton {
+    border: 2px solid lightgreen;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    border-style: inset;
+    background-color: cyan;
+}
+
 .form {
     display: flex;
 }
