--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -8,5 +8,9 @@
 }
 
 .appContainer {
-    display: flex;
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    margin: 0;
+    background-color: green;
 }
