styled splash page, navbar, and loginform

--- a/react-app/src/components/Nav/NavBar.module.css
+++ b/react-app/src/components/Nav/NavBar.module.css
@@ -1,4 +1,33 @@
 .nav {
     display: flex;
     justify-content: center;
+    padding: 20px;
+}
+
+.home {
+    display: flex;
+    padding: 5px;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.active {
+    text-decoration: none;
+}
+
+.users {
+    display: flex;
+    padding: 5px;
+}
+
+.login {
+    display: flex;
+    padding: 5px;
+}
+
+.logout {
+    display: flex;
+    padding: 5px;
 }
