--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -1,3 +1,79 @@
-.form {
+.wrapper {
     display: flex;
+    flex-direction: column;
+    background-color: #1e4d2b;
+    box-shadow: 0 0 2px 1px darkcyan;
+    background-position: center;
+    background-clip: padding-box;
+    background-repeat: no-repeat;
+    min-width: 100%;
+    min-height: 100%;
+}
+.titleContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #1e4d2b;
+}
+.title {
+    border: 2px solid black;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    padding: 10px 20px;
+    background-color: darkgreen;
+    font-size: 80px;
+    margin: 5px;
+}
+.subtitleContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    padding: 10px 20px;
+    background-color: darkgreen;
+    font-size: 80px;
+    margin: 5px;
+}
+.subtitle1 {
+    font-size: 80px;
+    margin: 5px;
+}
+.subtitle2 {
+    font-size: 80px;
+    margin: 5px;
+}
+
+.modalContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.modalButton {
+    border: 2px solid lightgreen;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    border-style: inset;
+    background-color: darkgreen;
+    margin-bottom: 5px;
+    padding: 15px;
+    font-size: 25px;
+}
+.form {
+    background-color: lightseagreen;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.field {
+    color: darkblue;
+    border-color: darkblue;
+}
+.buttonContainer {
+    display: flex;
+    margin-top: 5px;
+    justify-content: center;
 }
