--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footerContainer {
-    display: flex;
-    justify-content: space-around;
-    position: absolute;
+    display: block;
+    position: fixed;
+    bottom: 0;
     bottom: 0px;
     width: 100%;
     background-color: #087830;
