--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -1,4 +1,7 @@
 .splash {
-    display: flex;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/field.png);
+    background-repeat: none;
+    background-size: cover;
 }
