--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -65,14 +65,21 @@
     font-size: 25px;
 }
 .form {
-    background-color: lightseagreen;
+    background-color: darkgreen;
     border-radius: 5px;
-    padding: 10px;
+    padding: 20px;
 }
 
 .field {
-    color: darkblue;
-    border-color: darkblue;
+    color: black;
+    border: 2px solid lightgrey;
+    padding: 50px;
+}
+
+.legend {
+    background-color: lightgray;
+    font-size: 50px;
+    padding: 10px;
 }
 .buttonContainer {
     display: flex;
