--- a/react-app/src/components/Logout/LogoutButton.module.css
+++ b/react-app/src/components/Logout/LogoutButton.module.css
@@ -1,8 +1,16 @@
+.buttonWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .button {
+    font-size: 20px;
     display: flex;
     border: 2px solid darkgreen;
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
     border-style: inset;
     background-color: green;
+    padding: 5px;
 }
