placed nav links in separate divs to space better

--- a/react-app/src/components/Nav/NavBar.module.css
+++ b/react-app/src/components/Nav/NavBar.module.css
@@ -1,8 +1,16 @@
 .nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 20px;
     border: 2px solid aliceblue;
+}
+
+.navLeft {
+    display: flex;
+}
+
+.navRight {
+    display: flex;
 }
 
 .home {
