--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -1,9 +1,11 @@
 .homeWrapper {
     display: flex;
+    margin: 5px 0 0 5px;
 }
 
 .servers {
     display: flex;
+    margin: 0 10px 0 0;
 }
 
 .messages {
