--- a/react-app/src/components/Servers/Servers.module.css
+++ b/react-app/src/components/Servers/Servers.module.css
@@ -1,3 +1,22 @@
 .wrapper {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.add {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.addbutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttonImg {
 }
