working on created server not rendering

--- a/react-app/src/components/Servers/Servers.module.css
+++ b/react-app/src/components/Servers/Servers.module.css
@@ -5,6 +5,10 @@
     justify-content: center;
 }
 
+.tileWrapper {
+    background-color: grey;
+}
+
 .add {
     display: flex;
     justify-content: center;
