--- a/react-app/src/components/Login/LoginForm.module.css
+++ b/react-app/src/components/Login/LoginForm.module.css
@@ -4,11 +4,14 @@
 }
 
 .modalButton {
+    font-size: 20px;
+    display: flex;
     border: 2px solid darkgreen;
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
     border-style: inset;
     background-color: green;
+    padding: 5px;
 }
 
 .form {
