fixed channel card being rendered when serverchannels was empty using reduce

--- a/react-app/src/components/Channels/Channels.module.css
+++ b/react-app/src/components/Channels/Channels.module.css
@@ -1,5 +1,6 @@
 .channelsWrapper {
     display: flex;
+    flex-direction: column;
     background-color: aliceblue;
-    min-height: 100%;
+    min-height: fit-content;
 }
