finished delete channel crud

--- a/react-app/src/components/Channels/ChannelCard.module.css
+++ b/react-app/src/components/Channels/ChannelCard.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding: 10px;
     background-color: grey;
+    border: 2px solid black;
 }
 
 .iconWrapper {
@@ -23,4 +24,17 @@
 
 .topic {
     font-size: 18px;
+}
+.crud {
+    display: flex;
+    justify-content: space-between;
+}
+
+.edit {
+    display: flex;
+}
+
+.delete {
+    display: flex;
+    justify-content: flex-end;
 }
