adjusted login modal for uniform styling

--- a/react-app/src/components/Nav/NavBar.module.css
+++ b/react-app/src/components/Nav/NavBar.module.css
@@ -7,10 +7,14 @@
 
 .navLeft {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .navRight {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .home {
