--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -1,22 +1,79 @@
 .form {
-    background-color: darkgreen;
+    background-color: #014421;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .field {
     color: black;
-    border: 2px solid lightgrey;
-    padding: 50px;
+    border: 4px solid #e5e4e2;
+    padding: 50px 50px 25px 50px;
+    min-height: 385px;
 }
 
 .legend {
-    background-color: lightgray;
+    background-color: #e5e4e2;
     font-size: 50px;
     padding: 10px;
 }
+
+.errors {
+    padding: 0 0 20px 0;
+}
+
+.error {
+    color: #bfc1c2;
+    font-size: 20px;
+    font-weight: 300px;
+    padding: 2px;
+}
+
+.usernameWrapper {
+    display: flex;
+    align-items: flex-end;
+    padding: 5px;
+}
+
+.usernameLabel {
+    justify-content: center;
+    color: #f2f3f4;
+    font-size: 25px;
+    padding: 0 5px 0 0;
+}
+
+.emailWrapper {
+    display: flex;
+    align-items: flex-end;
+    padding: 5px;
+}
+
+.emailLabel {
+    justify-content: center;
+    color: #f2f3f4;
+    font-size: 25px;
+    padding: 0 5px 0 0;
+}
+
+.passwordWrapper {
+    display: flex;
+    align-items: flex-end;
+    padding: 5px;
+}
+
+.passwordLabel {
+    color: #f2f3f4;
+    font-size: 25px;
+    padding: 0 5px 0 0;
+}
+
 .buttonContainer {
     display: flex;
-    margin-top: 5px;
     justify-content: center;
+    margin-top: 10px;
+}
+
+.button {
+    margin: 5px;
+    width: 150px;
+    height: 30px;
 }
