--- a/react-app/src/components/Messages/MessageCard.module.css
+++ b/react-app/src/components/Messages/MessageCard.module.css
@@ -1,7 +1,21 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding: 10px;
+}
+
+.channelInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.name {
+    font-size: 30px;
+    font-weight: 400px;
+    color: #e5e4e2;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px red;
 }
 
 .content {
