--- a/react-app/src/App.module.css
+++ b/react-app/src/App.module.css
@@ -1,9 +1,9 @@
 .appContainer {
     position: absolute;
-    top: 0;
+    top: 100px;
     bottom: 0;
     left: 0;
     right: 0;
     margin: 0;
-    background-color: green;
+    background-color: rgba(0, 128, 0, 0.719);
 }
