--- a/react-app/src/components/Nav/NavBar.module.css
+++ b/react-app/src/components/Nav/NavBar.module.css
@@ -2,7 +2,15 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    border: 2px solid aliceblue;
+    border-color: aliceblue;
+    border-style: solid;
+    border-width: 2px;
+    background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/NFL_logos/Assets/sideline_cropped.jpg);
+    background-size: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
 }
 
 .navLeft {
@@ -40,6 +48,7 @@
     text-decoration: none;
     text-align: center;
     color: black;
+    font-weight: bold;
     background-color: aliceblue;
 }
 
