added hover to logout button

--- a/react-app/src/components/Logout/LogoutButton.module.css
+++ b/react-app/src/components/Logout/LogoutButton.module.css
@@ -14,3 +14,8 @@
     background-color: green;
     padding: 5px;
 }
+
+.button:hover {
+    background-color: aliceblue;
+    font-weight: bold;
+}
