--- a/react-app/src/components/Server/ServerEdit.module.css
+++ b/react-app/src/components/Server/ServerEdit.module.css
@@ -14,3 +14,8 @@
     background-color: green;
     padding: 5px;
 }
+
+.modalButton:hover {
+    background-color: aliceblue;
+    font-weight: bold;
+}
