styled login modal

--- a/react-app/src/components/Login/LoginModal.module.css
+++ b/react-app/src/components/Login/LoginModal.module.css
@@ -14,3 +14,8 @@
     background-color: green;
     padding: 5px;
 }
+
+.modalButton:hover {
+    font-weight: bold;
+    background-color: #0bda51;
+}
