--- a/react-app/src/components/Login/LoginForm.module.css
+++ b/react-app/src/components/Login/LoginForm.module.css
@@ -1,20 +1,23 @@
 .form {
-    background-color: #014421;
+    background-color: #195905;
     border-radius: 5px;
     padding: 10px;
 }
 
 .field {
     color: black;
-    border: 4px solid #e5e4e2;
+    border: 4px solid #029e7e;
     padding: 50px 50px 25px 50px;
     min-height: 385px;
 }
 
 .legend {
-    background-color: #e5e4e2;
+    background-color: #029e7e;
     font-size: 50px;
     padding: 10px;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    border-radius: 5px;
+    color: black;
 }
 
 .errors {
@@ -28,6 +31,12 @@
     padding: 2px;
 }
 
+.inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .emailWrapper {
     display: flex;
     align-items: flex-end;
@@ -36,9 +45,10 @@
 
 .emailLabel {
     justify-content: center;
-    color: #f2f3f4;
-    font-size: 25px;
+    color: #029e7e;
+    font-size: 40px;
     padding: 0 5px 0 0;
+    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
 
 .passwordWrapper {
@@ -48,9 +58,15 @@
 }
 
 .passwordLabel {
-    color: #f2f3f4;
-    font-size: 25px;
+    color: #029e7e;
+    font-size: 40px;
     padding: 0 5px 0 0;
+    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+}
+
+.buttonWrapper {
+    display: flex;
+    flex-direction: column;
 }
 
 .loginButtonContainer {
@@ -61,7 +77,13 @@
 .loginButton {
     margin: 5px;
     width: 100px;
-    height: 30px;
+    font-size: 20px;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    background-color: #029e7e;
+}
+
+.loginButton:hover {
+    background-color: #03b48f;
 }
 
 .demoLoginButtonContainer {
@@ -72,5 +94,11 @@
 .demoButton {
     margin: 5px;
     width: 150px;
-    height: 30px;
+    font-size: 20px;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    background-color: #029e7e;
+}
+
+.demoButton:hover {
+    background-color: #03b48f;
 }
