--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -1,11 +1,13 @@
 .splash {
-    width: 100%;
-    height: 95%;
-    background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/field.png);
-    background-size: cover;
+    height: 100%;
+    background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/NFL_logos/Assets/NFLbackground.jpg);
+    background-size: 100% 95%;
+    background-repeat: no-repeat;
+    background-attachment: scroll, local;
 }
 
 .modalWrapper {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
