--- a/react-app/src/App.module.css
+++ b/react-app/src/App.module.css
@@ -5,5 +5,5 @@
     left: 0;
     right: 0;
     margin: 0;
-    background-color: rgba(0, 128, 0, 0.719);
+    /* background-color: rgba(0, 128, 0, 0.8); */
 }
