--- a/react-app/src/components/Servers/ServerTile.module.css
+++ b/react-app/src/components/Servers/ServerTile.module.css
@@ -1,8 +1,8 @@
 .iconWrapper {
-    padding: 10px;
+    padding: 5px;
 }
 
 .icon {
-    width: 50px;
-    height: 50px;
+    max-width: 100px;
+    max-height: 100px;
 }
