--- a/react-app/src/components/Servers/Servers.module.css
+++ b/react-app/src/components/Servers/Servers.module.css
@@ -3,11 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: 80%;
-}
-
-.tileWrapper {
-    background-color: black;
+    max-height: 98%;
 }
 
 .add {
