styling indiv server channel cards

--- a/react-app/src/components/Channels/AddChannelModal.module.css
+++ b/react-app/src/components/Channels/AddChannelModal.module.css
@@ -1,6 +1,9 @@
 .wrapper {
     display: flex;
     justify-content: center;
-    background-color: grey;
+    background-color: #029e7e;
+    border: 2px solid darkgreen;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
     padding: 10px;
 }
