--- a/react-app/src/components/Channels/Channels.module.css
+++ b/react-app/src/components/Channels/Channels.module.css
@@ -1,6 +1,28 @@
 .channelsWrapper {
     display: flex;
     flex-direction: column;
-    background-color: aliceblue;
     min-height: fit-content;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    padding: 5px;
+    background-color: #2e8b57;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+}
+
+.msgContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.msg {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    padding: 5px;
+    background-color: #2e8b57;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
