--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -1,10 +1,18 @@
 .wrapper {
     display: flex;
     margin: 0;
+    height: 93%;
+    background-color: #1e4d2b;
 }
 
 .servers {
     display: flex;
-    margin: 0 10px 0 0;
-    align-items: flex-start;
+    background-color: #2e8b57;
+    padding: 0 10px;
+}
+
+.channels {
+    display: flex;
+    flex-direction: column;
+    max-height: 98%;
 }
