working on styling messages, and started restructuring database

--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -13,4 +13,11 @@
 
 .messages {
     display: flex;
+    flex-direction: column;
+    padding: 10px;
+    background-color: #029e7e;
+    border: 2px solid darkgreen;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    border-style: inset;
 }
