--- a/react-app/src/components/Messages/Messages.module.css
+++ b/react-app/src/components/Messages/Messages.module.css
@@ -1,4 +1,15 @@
 .wrapper {
     display: flex;
     flex-direction: column;
+    max-height: 98%;
+}
+
+.messages {
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid darkgreen;
+    color: #1e4d2b;
+    font-size: 40px;
+    padding: 0 5px 0 0;
+    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
