fixed server and home page background

--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -3,7 +3,7 @@
     margin: 0;
     height: 93%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/NFL_logos/Assets/stadium_from_above_horizontal.jpg);
-    background-size: contain;
+    background-size: 100% 93%;
 }
 
 .servers {
