finished styling edit server modal

--- a/react-app/src/components/Server/EditServer.module.css
+++ b/react-app/src/components/Server/EditServer.module.css
@@ -26,8 +26,8 @@
 
 .error {
     color: #bfc1c2;
-    font-size: 20px;
-    font-weight: 300px;
+    font-size: 25px;
+    font-weight: 500px;
     padding: 2px;
 }
 
@@ -80,6 +80,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10px;
+    border: 2px solid darkgreen;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    border-style: inset;
+    background-color: black;
+}
+.iconButtonWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 5px;
 }
 
@@ -87,11 +99,21 @@
     color: #029e7e;
     font-size: 40px;
     padding: 0 5px 0 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+    text-shadow: 1px 1px 1px darkgreen, 2px 2px 2px darkgreen;
+}
+
+.iconImg {
+    max-height: 100px;
+    max-width: 100px;
 }
 
 .newIcon {
     padding: 0 10px;
+}
+
+.deleteContainer {
+    display: flex;
+    justify-content: center;
 }
 
 .buttonContainer {
