--- a/react-app/src/components/Server/DeleteButton.module.css
+++ b/react-app/src/components/Server/DeleteButton.module.css
@@ -1,5 +1,3 @@
-.deleteWrapper {
-}
 .warningContainer {
     display: flex;
     justify-content: center;
@@ -39,4 +37,12 @@
     font-size: 30px;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
     background-color: #029e7e;
+}
+
+.indivError {
+    display: flex;
+    font-size: 25px;
+    margin: 5px 0;
+    color: aliceblue;
+    text-shadow: 1px 1px 1px black;
 }
