--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -21,12 +21,16 @@
 }
 
 .errors {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 0 0 20px 0;
 }
 
 .error {
     color: #bfc1c2;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 300px;
     padding: 2px;
 }
