--- a/react-app/src/components/Login/LoginForm.module.css
+++ b/react-app/src/components/Login/LoginForm.module.css
@@ -7,7 +7,7 @@
 .field {
     color: black;
     border: 4px solid #029e7e;
-    padding: 50px 50px 25px 50px;
+    padding: 25px;
     min-height: 385px;
 }
 
@@ -64,10 +64,11 @@
 
 .loginButtonContainer {
     display: flex;
+    margin-bottom: 5px;
     justify-content: center;
+    align-items: center;
 }
 .loginButton {
-    margin: 5px;
     width: 100px;
     font-size: 20px;
     font-weight: 800;
@@ -81,10 +82,10 @@
 .demoLoginButtonContainer {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .demoButton {
-    margin: 5px;
     width: 150px;
     font-size: 20px;
     font-weight: 800;
