--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -7,7 +7,7 @@
 .field {
     color: black;
     border: 4px solid #029e7e;
-    padding: 50px 50px 25px 50px;
+    padding: 25px;
     min-height: 385px;
 }
 
@@ -98,7 +98,6 @@
 }
 
 .button {
-    margin: 5px;
     width: 150px;
     font-size: 20px;
     font-weight: 800;
