fixed most of the heroku display errors

--- a/react-app/src/components/Messages/Messages.module.css
+++ b/react-app/src/components/Messages/Messages.module.css
@@ -10,6 +10,6 @@
     border-bottom: 2px solid darkgreen;
     color: #1e4d2b;
     font-size: 40px;
-    padding: 0 5px 0 0;
+    margin: 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
