--- a/react-app/src/components/Channels/Channels.module.css
+++ b/react-app/src/components/Channels/Channels.module.css
@@ -9,6 +9,7 @@
     justify-content: center;
     font-size: 30px;
     padding: 5px;
+    margin: 0;
     background-color: #2e8b57;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
@@ -21,8 +22,10 @@
 .msg {
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 30px;
     padding: 5px;
+    margin: 0;
     background-color: #2e8b57;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
