--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -1,21 +1,19 @@
 .homeWrapper {
     display: flex;
     margin: 0;
-    height: 93%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/NFL_logos/Assets/stadium_from_above_horizontal.jpg);
-    background-size: 100% 93%;
+    background-size: cover;
 }
 
 .servers {
     display: flex;
     background-color: #2e8b57;
-    padding: 0 10px;
+    padding: 10px 5px;
 }
 
 .messages {
     display: flex;
     flex-direction: column;
-    padding: 10px;
     background-color: #029e7e;
     border: 2px solid darkgreen;
     border-radius: 2px;
