--- a/react-app/src/components/Messages/MessageCard.module.css
+++ b/react-app/src/components/Messages/MessageCard.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 10px;
+    padding: 0 5px;
+    border-bottom: 2px solid darkgreen;
 }
 
 .channelInfo {
@@ -13,7 +14,7 @@
 
 .name {
     font-size: 30px;
-    font-weight: 400px;
+    font-weight: 600;
     color: darkgreen;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
@@ -22,8 +23,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
     background-color: darkgreen;
     color: aliceblue;
-    border-radius: 5px;
+    border-radius: 2px;
 }
