--- a/react-app/src/components/Nav/NavBar.module.css
+++ b/react-app/src/components/Nav/NavBar.module.css
@@ -1,16 +1,15 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
     border-color: aliceblue;
     border-style: solid;
     border-width: 2px;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/NFL_logos/Assets/sideline_cropped.jpg);
-    background-size: 100%;
-    position: fixed;
-    left: 0;
-    right: 0;
+    background-size: cover;
+    position: sticky;
+    z-index: 2;
     top: 0;
+    max-width: 100%;
 }
 
 .navLeft {
@@ -41,7 +40,7 @@
     background-color: green;
     font-size: 20px;
     color: black;
-    padding: 10px;
+    padding: 5px;
 }
 .link:hover {
     font-weight: bold;
