--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -1,9 +1,9 @@
 .wrapper {
     display: flex;
     margin: 0;
-    height: 100%;
+    min-height: 100%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/NFL_logos/Assets/stadium_from_above_horizontal.jpg);
-    background-size: 100% 93%;
+    background-size: cover;
 }
 
 .servers {
