--- a/react-app/src/components/Servers/Servers.module.css
+++ b/react-app/src/components/Servers/Servers.module.css
@@ -3,12 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    max-height: 98%;
+    z-index: 1;
 }
 
 .add {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
 }
