adjusted css styling on edit channel modal

--- a/react-app/src/components/Channels/EditChannel.module.css
+++ b/react-app/src/components/Channels/EditChannel.module.css
@@ -30,11 +30,13 @@
 .nameWrapper {
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin: 5px 0;
 }
 
 .nameLabel {
     color: #029e7e;
-    font-size: 40px;
+    font-size: 30px;
     padding: 0 5px 0 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
@@ -42,11 +44,13 @@
 .topicWrapper {
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin: 10px 0;
 }
 
 .topicLabel {
     color: #029e7e;
-    font-size: 40px;
+    font-size: 30px;
     padding: 0 5px 0 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
@@ -57,28 +61,23 @@
 
 .iconWrapper {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 5px;
-    border: 2px solid darkgreen;
-    border-radius: 2px;
-    box-shadow: 0 0 5px lightgreen;
-    border-style: inset;
-    background-color: black;
 }
 .iconButtonWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0 5px;
+    margin: 5px;
 }
 
 .iconLabel {
     color: #029e7e;
-    font-size: 40px;
-    text-shadow: 1px 1px 1px darkgreen, 2px 2px 2px darkgreen;
+    font-size: 30px;
+    padding: 0 5px 0 0;
+    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
 
 .deleteContainer {
@@ -89,6 +88,8 @@
 
 .buttonContainer {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
@@ -97,6 +98,7 @@
     font-size: 30px;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
     background-color: #029e7e;
+    max-height: 50px;
 }
 
 .button:hover {
@@ -106,7 +108,7 @@
 .deleteButtonContainer {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .updateContainer {
