changed server backgnd to transparent and channels tile opacity

--- a/react-app/src/components/Channels/Channels.module.css
+++ b/react-app/src/components/Channels/Channels.module.css
@@ -8,7 +8,7 @@
     justify-content: center;
     font-size: 30px;
     margin: 0;
-    background-color: #2e8b57;
+    background-color: rgba(46, 139, 87, 0.8);
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
 
