--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -8,11 +8,13 @@
 
 .servers {
     display: flex;
-    background-color: #2e8b57;
+    background-color: transparent;
     padding: 5px 10px;
+    max-height: 95%;
 }
 
 .channels {
     display: flex;
     flex-direction: column;
+    max-height: 95%;
 }
