fixed styling for consistency

--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -8,16 +8,22 @@
 
 .servers {
     display: flex;
-    background-color: #2e8b57;
-    padding: 10px 5px;
+    background-color: transparent;
+    padding: 5px 10px;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    max-height: 95%;
 }
 
 .messages {
     display: flex;
     flex-direction: column;
-    background-color: #029e7e;
+    background-color: rgba(46, 139, 87, 0.8);
     border: 2px solid darkgreen;
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
     border-style: inset;
+    max-height: 95%;
+    overflow-y: auto;
+    scroll-behavior: smooth;
 }
