--- a/react-app/src/components/Messages/Messages.module.css
+++ b/react-app/src/components/Messages/Messages.module.css
@@ -1,15 +1,13 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    max-height: 93%;
+    max-height: 95%;
 }
 
 .messages {
     display: flex;
     justify-content: center;
-    border-bottom: 2px solid darkgreen;
-    color: #1e4d2b;
-    font-size: 40px;
+    font-size: 30px;
     margin: 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
