--- a/react-app/src/components/Servers/CreateServer.module.css
+++ b/react-app/src/components/Servers/CreateServer.module.css
@@ -19,10 +19,18 @@
     color: black;
 }
 
+.errors {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .error {
     color: #bfc1c2;
     font-size: 20px;
     font-weight: 300;
+    padding: 5px;
 }
 
 .inputs {
