--- a/react-app/src/components/Channels/Channels.module.css
+++ b/react-app/src/components/Channels/Channels.module.css
@@ -7,7 +7,8 @@
 .title {
     display: flex;
     justify-content: center;
-    font-size: 30px;
+    font-size: 50px;
+    font-weight: 600;
     margin: 0;
     background-color: rgba(46, 139, 87, 0.8);
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
