--- a/react-app/src/components/Messages/Messages.module.css
+++ b/react-app/src/components/Messages/Messages.module.css
@@ -7,7 +7,9 @@
 .messages {
     display: flex;
     justify-content: center;
-    font-size: 30px;
+    font-size: 50px;
+    font-weight: 600;
+    border-bottom: 2px solid darkgreen;
     margin: 0;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
