--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -2,8 +2,29 @@
     display: flex;
     margin: 0;
     min-height: 100%;
+    min-width: 100%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/stadium_from_above_horizontal.jpg);
     background-size: cover;
+}
+
+.homeLeft {
+    display: flex;
+    max-height: 95%;
+}
+
+.homeRight {
+    display: flex;
+    justify-content: center;
+    max-height: 95%;
+    width: 20%;
+}
+
+.feed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    max-height: 95%;
 }
 
 .servers {
@@ -11,8 +32,8 @@
     background-color: transparent;
     padding: 5px 10px;
     overflow-y: auto;
+    overflow-x: hidden;
     scroll-behavior: smooth;
-    max-height: 95%;
 }
 
 .messages {
@@ -23,7 +44,6 @@
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
     border-style: inset;
-    max-height: 95%;
     overflow-y: auto;
     scroll-behavior: smooth;
 }
