--- a/react-app/src/components/Messages/MessageFeed.module.css
+++ b/react-app/src/components/Messages/MessageFeed.module.css
@@ -1,3 +1,7 @@
 .title {
     font-size: 100px;
+    font-weight: 600;
+    border-bottom: 2px solid darkgreen;
+    margin: 0;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
