--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -1,5 +1,4 @@
 .homeBackground {
-    display: flex;
     margin: 0;
     min-height: 100%;
     min-width: 100%;
@@ -8,41 +7,22 @@
 }
 
 .contentWrapper {
-    display: flex;
-}
-
-.homeLeft {
-    display: flex;
-    max-height: 95%;
-}
-
-.homeRight {
-    display: flex;
-    justify-content: center;
-    max-height: 95%;
-}
-
-.feed {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 60%;
-    max-height: 95%;
-    margin: 5px;
+    display: grid;
+    grid-template-columns: 0.5fr 2fr 6fr 2fr;
+    grid-template-rows: 100vh;
+    grid-template-areas: "server messages feed friends";
 }
 
 .servers {
-    display: flex;
+    grid-area: server;
     background-color: transparent;
     padding: 5px 10px;
     overflow-y: auto;
-    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
 .messages {
-    display: flex;
-    flex-direction: column;
+    grid-area: messages;
     background-color: rgba(46, 139, 87, 0.8);
     border: 2px solid darkgreen;
     border-radius: 2px;
@@ -50,4 +30,12 @@
     border-style: inset;
     overflow-y: auto;
     scroll-behavior: smooth;
+}
+
+.feed {
+    grid-area: feed;
+}
+
+.friends {
+    grid-area: friends;
 }
