--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -1,13 +1,19 @@
-.wrapper {
-    display: flex;
+.background {
     margin: 0;
     min-height: 100%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/stadium_from_above_horizontal.jpg);
     background-size: cover;
 }
 
+.contentWrapper {
+    display: grid;
+    grid-template-columns: 0.5fr 2fr 6fr 2fr;
+    grid-template-rows: 100vh;
+    grid-template-areas: "server channels feed friends";
+}
+
 .servers {
-    display: flex;
+    grid-area: server;
     background-color: transparent;
     padding: 5px 10px;
     max-height: 95%;
@@ -16,10 +22,17 @@
 }
 
 .channels {
-    display: flex;
-    flex-direction: column;
+    grid-area: channels;
     max-height: 95%;
     overflow-y: auto;
     scroll-behavior: smooth;
     max-height: 95%;
+}
+
+.feed {
+    grid-area: feed;
+}
+
+.friends {
+    grid-area: friends;
 }
