--- a/react-app/src/components/Friends/Friends.module.css
+++ b/react-app/src/components/Friends/Friends.module.css
@@ -3,4 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: rgba(46, 139, 87, 0.8);
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: 600;
+    margin: 0 0 5px 0;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
