styled message feed title

--- a/react-app/src/components/Messages/MessageFeed.module.css
+++ b/react-app/src/components/Messages/MessageFeed.module.css
@@ -4,7 +4,7 @@
     font-size: 100px;
     font-weight: 600;
     margin: 0 0 5px 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    text-shadow: 1px 1px 1px darkgreen, 2px 2px 1px #0bda51;
 }
 
 .messages {
