--- a/react-app/src/components/Friends/Friends.module.css
+++ b/react-app/src/components/Friends/Friends.module.css
@@ -4,6 +4,11 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(46, 139, 87, 0.8);
+    border-bottom: 2px solid darkgreen;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    border-style: inset;
+    margin: 0;
 }
 
 .title {
@@ -12,5 +17,5 @@
     font-size: 50px;
     font-weight: 600;
     margin: 0 0 5px 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    text-shadow: 1px 1px 1px darkgreen, 2px 2px 1px #0bda51;
 }
