--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -28,24 +28,23 @@
 
 .feed {
     grid-area: feed;
-    background-color: rgba(46, 139, 87, 0.8);
-    border: 2px solid darkgreen;
-    border-radius: 2px;
-    box-shadow: 0 0 5px lightgreen;
-    border-style: inset;
-    overflow-y: auto;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+.feed::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .friends {
     grid-area: friends;
-    background-color: transparent;
-    border: 2px solid darkgreen;
-    border-radius: 2px;
-    box-shadow: 0 0 5px lightgreen;
-    border-style: inset;
-    overflow-y: auto;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.friends::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
