--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -17,8 +17,13 @@
     grid-area: server;
     background-color: transparent;
     padding: 5px 10px;
-    overflow-y: auto;
-    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+.servers::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .messages {
@@ -28,8 +33,14 @@
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
     border-style: inset;
-    overflow-y: auto;
-    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.messages::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .feed {
