--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -16,14 +16,25 @@
     grid-area: server;
     background-color: transparent;
     padding: 5px 10px;
-    overflow-y: auto;
-    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.servers::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .channels {
     grid-area: channels;
-    overflow-y: auto;
-    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+.channels::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .feed {
